--- a/provisioning/roles/hhvm/tasks/main.yml
+++ b/provisioning/roles/hhvm/tasks/main.yml
@@ -10,3 +10,11 @@
   with_items:
       - hhvm-fastcgi
   notify: hhvm_start
+
+- name: check hhvm path
+  shell: which hhvm
+  register: current_hhvm
+  ignore_errors: True
+
+- name: symlink hhvm as php
+  file: src="{{ current_hhvm.stdout }}" dest=/usr/bin/php state=link
