--- a/provisioning/roles/hhvm/handlers/main.yml
+++ b/provisioning/roles/hhvm/handlers/main.yml
@@ -1,4 +1,3 @@
 ---
-- name: hhvm_start
-  action: command hhvm --mode daemon -vServer.Type=fastcgi -vServer.Port=9000
-  
+- name: restart hhvm
+  action: service name=hhvm-fastcgi state=restarted enabled=yes
