--- a/provisioning/roles/common/tasks/main.yml
+++ b/provisioning/roles/common/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: use french debian mirror
-  lineinfile: dest=/etc/apt/sources.list regexp='^(.*)uk\.(.*)' line='\1fr.\2'
+  template: src=sources.list.j2 dest=/etc/apt/sources.list
 
 - name: upgrade the distro
   apt: update_cache=yes upgrade=yes cache_valid_time=3600
